Keep failures to resolve indices